force-app/main/default/objects/MMS_Stock__c/MMS_Stock__c.object-meta.xml
<CustomObject>
    <description>Store Inventory</description>
    <label>Stock</label>
    <nameField>
        <displayFormat>STOCK-{00000000}</displayFormat>
        <label>Stock Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>