force-app/main/default/objects/MMS_Stock__c/fields/Alternate_Name__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Name__c</fullName>
    <inlineHelpText>Max 255 Chars</inlineHelpText>
    <label>Alternate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>