force-app/main/default/objects/MMS_Stock__c/fields/Avg_Business_Days_to_Receive_Order__c.field-meta.xml
<CustomField>
    <fullName>Avg_Business_Days_to_Receive_Order__c</fullName>
    <inlineHelpText>Average business days to receive an order after placed</inlineHelpText>
    <label>Avg Business Days to Receive Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>