force-app/main/default/objects/MMS_Stock__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Brand doesn&apos;t exist. Create a new Store Stock Brand Account</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Stock Store Brand</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Stock (Brand)</relationshipLabel>
    <relationshipName>Branded_Stock</relationshipName>
    <type>Lookup</type>
</CustomField>