force-app/main/default/objects/MMS_Stock__c/fields/Bulk_Markup__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Markup__c</fullName>
    <formula>IF(Bulk_Cost__c &gt; 0,(Bulk_MSRP__c - Bulk_Cost__c)/Bulk_Cost__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>MSRP markup from Cost</inlineHelpText>
    <label>Bulk Markup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>