force-app/main/default/objects/MMS_Stock__c/fields/Bulk_MSRP__c.field-meta.xml
<CustomField>
    <fullName>Bulk_MSRP__c</fullName>
    <label>Bulk MSRP</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>