force-app/main/default/objects/MMS_Stock__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>max 3000 chars</inlineHelpText>
    <label>Description</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>