force-app/main/default/objects/MMS_Stock__c/fields/Indiv_Markup__c.field-meta.xml
<CustomField>
    <fullName>Indiv_Markup__c</fullName>
    <formula>IF(Indiv_Cost__c &gt; 0, (Indiv_MSRP__c - Indiv_Cost__c)/Indiv_Cost__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>MSRP markup from Cost</inlineHelpText>
    <label>Indiv Markup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>