force-app/main/default/objects/MMS_Stock__c/fields/Indiv_MSRP__c.field-meta.xml
<CustomField>
    <fullName>Indiv_MSRP__c</fullName>
    <label>Indiv MSRP</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>