force-app/main/default/objects/MMS_Stock__c/fields/Indiv_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Indiv_Unit_of_Measure__c</fullName>
    <inlineHelpText>50 chars max</inlineHelpText>
    <label>Indiv Unit of Measure</label>
    <length>50</length>
    <type>Text</type>
</CustomField>