force-app/main/default/objects/MMS_Stock__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Store Stock Manufacturer Account</inlineHelpText>
    <label>Manufacturer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Manufacturer doesn&apos;t exist. Create a Store Stock Manufacturer Account.</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Store Stock Manufacturer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Stock (Manufacturer)</relationshipLabel>
    <relationshipName>Stock_Manufacturer</relationshipName>
    <type>Lookup</type>
</CustomField>