force-app/main/default/objects/MMS_Stock__c/fields/Min_Order_Indiv_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Min_Order_Indiv_Quantity__c</fullName>
    <inlineHelpText>Least orderable amount in indiv units of measure</inlineHelpText>
    <label>Min Order Indiv Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>