force-app/main/default/objects/MMS_Stock__c/fields/MMS_Code__c.field-meta.xml
<CustomField>
    <fullName>MMS_Code__c</fullName>
    <formula>Supplier_Account__r.MMS_Supplier_Abbrev_Code__c  &amp; &quot;-&quot; &amp;  Supplier_Code__c</formula>
    <inlineHelpText>Formula of {4 char Supplier Abbrev}-{Supplier Code}</inlineHelpText>
    <label>MMS ID Code</label>
    <type>Text</type>
</CustomField>