force-app/main/default/objects/MMS_Stock__c/fields/Num_Bulk_Items_in_Super_Bulk_Unit__c.field-meta.xml
<CustomField>
    <fullName>Num_Bulk_Items_in_Super_Bulk_Unit__c</fullName>
    <label># of Bulk Items in Super Bulk Unit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>