force-app/main/default/objects/MMS_Stock__c/fields/Num_Indiv_Items_in_Bulk_Unit__c.field-meta.xml
<CustomField>
    <fullName>Num_Indiv_Items_in_Bulk_Unit__c</fullName>
    <label># of Indiv Items in Bulk Unit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>