force-app/main/default/objects/MMS_Stock__c/fields/Ordering_Notes__c.field-meta.xml
<CustomField>
    <fullName>Ordering_Notes__c</fullName>
    <label>Ordering Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>