force-app/main/default/objects/MMS_Stock__c/fields/Product_Info_Website__c.field-meta.xml
<CustomField>
    <fullName>Product_Info_Website__c</fullName>
    <label>Product Info Website</label>
    <type>Url</type>
</CustomField>