force-app/main/default/objects/MMS_Stock__c/fields/Restock_Point_in_Indiv_UoM__c.field-meta.xml
<CustomField>
    <fullName>Restock_Point_in_Indiv_UoM__c</fullName>
    <inlineHelpText>Quantity when less than, needs to be ordered</inlineHelpText>
    <label>Restock Point in Indiv UoM</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>