force-app/main/default/objects/MMS_Stock__c/fields/Specifications__c.field-meta.xml
<CustomField>
    <fullName>Specifications__c</fullName>
    <inlineHelpText>max 10k chars</inlineHelpText>
    <label>Specifications</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>