force-app/main/default/objects/MMS_Stock__c/fields/Super_Bulk_Cost__c.field-meta.xml
<CustomField>
    <fullName>Super_Bulk_Cost__c</fullName>
    <label>Super Bulk Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>