force-app/main/default/objects/MMS_Stock__c/fields/Super_Bulk_Markup__c.field-meta.xml
<CustomField>
    <fullName>Super_Bulk_Markup__c</fullName>
    <formula>IF(Super_Bulk_Cost__c &gt; 0, (Super_Bulk_MSRP__c - Super_Bulk_Cost__c)/Super_Bulk_Cost__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>MSRP markup from Cost</inlineHelpText>
    <label>Super Bulk Markup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>