force-app/main/default/objects/MMS_Stock__c/fields/Supplier_Code__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Code__c</fullName>
    <inlineHelpText>max 255 chars</inlineHelpText>
    <label>Supplier Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>