force-app/main/default/objects/MMS_Stock__c/fields/Supplier_Minimum_Advertised_Price__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Minimum_Advertised_Price__c</fullName>
    <inlineHelpText>Minimum price supplier allows to sell at</inlineHelpText>
    <label>Supplier&apos;s Minimum Advertised Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>