force-app/main/default/objects/MMS_Stock__c/fields/Units_of_Measure_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Units_of_Measure_Conversion__c</fullName>
    <formula>IF(
	NOT(ISBLANK(Indiv_Unit_of_Measure__c)),
	Indiv_Unit_of_Measure__c &amp; &quot; is the base unit of measure. &quot;,
	&quot;&quot;
) &amp; IF(
	AND(
		NOT(ISBLANK(Super_Bulk_Unit_of_Measure__c)), 
		NOT(ISBLANK(Bulk_Unit_of_Measure__c))
	),
	&quot;A(n) &quot; &amp; Super_Bulk_Unit_of_Measure__c &amp; &quot; contains &quot; &amp; TEXT(Num_Bulk_Items_in_Super_Bulk_Unit__c) &amp; &quot; &quot; &amp; Bulk_Unit_of_Measure__c &amp; &quot;(e)s. &quot;,
	&quot;&quot;
) &amp; IF(
	AND(
		NOT(ISBLANK(Bulk_Unit_of_Measure__c)), 
		NOT(ISBLANK(Indiv_Unit_of_Measure__c))
	),
	&quot;A(n) &quot; &amp; Bulk_Unit_of_Measure__c &amp; &quot; contains &quot; &amp; TEXT(Num_Indiv_Items_in_Bulk_Unit__c) &amp; &quot; &quot; &amp; Indiv_Unit_of_Measure__c &amp; &quot;(e)s.&quot;,
	&quot;&quot;
)</formula>
    <inlineHelpText>Formula displaying base indiv unit of measure and how many are in bulk and super bulk.</inlineHelpText>
    <label>Units of Measure Conversion</label>
    <type>Text</type>
</CustomField>