force-app/main/default/objects/MMS_Stock__c/fields/UPC_Code__c.field-meta.xml
<CustomField>
    <fullName>UPC_Code__c</fullName>
    <inlineHelpText>12 digit UPC Code</inlineHelpText>
    <label>UPC Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>